--- a/scrum-ios/scrum-ios/Levels.storyboard
+++ b/scrum-ios/scrum-ios/Levels.storyboard
@@ -8,6 +8,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Montserrat-Regular.ttf">
+            <string>Montserrat-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Levels View Controller-->
         <scene sceneID="tit-yR-3gk">
@@ -21,18 +26,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lj2-TO-bVP">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vvx-cO-3Br">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Niveles" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SaP-r1-xpr">
+                                        <rect key="frame" x="159" y="35" width="59" height="21"/>
+                                        <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="18"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J99-vp-dB3">
+                                        <rect key="frame" x="333" y="34" width="22" height="22"/>
+                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.2627450980392157" green="0.31372549019607843" blue="0.34509803921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="SaP-r1-xpr" firstAttribute="centerX" secondItem="Vvx-cO-3Br" secondAttribute="centerX" id="8T4-ZJ-PUT"/>
+                                    <constraint firstAttribute="height" constant="70" id="IfG-xG-F3N"/>
+                                    <constraint firstItem="J99-vp-dB3" firstAttribute="centerY" secondItem="Vvx-cO-3Br" secondAttribute="centerY" constant="10" id="N0q-O5-ejN"/>
+                                    <constraint firstAttribute="trailing" secondItem="J99-vp-dB3" secondAttribute="trailing" constant="20" id="NA5-nP-lmz"/>
+                                    <constraint firstItem="SaP-r1-xpr" firstAttribute="centerY" secondItem="Vvx-cO-3Br" secondAttribute="centerY" constant="10" id="trE-dj-raI"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lj2-TO-bVP">
+                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
                                 <color key="backgroundColor" red="0.89205109126984128" green="0.89205109126984128" blue="0.89205109126984128" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="0.0" id="5Ak-J2-8Ct">
                                     <size key="itemSize" width="371" height="144"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="5" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BigLevel" id="SL5-dc-4jV" customClass="BigLevelCollectionViewCell" customModule="scrum_ios" customModuleProvider="target">
-                                        <rect key="frame" x="2" y="0.0" width="371" height="144"/>
+                                        <rect key="frame" x="2" y="5" width="371" height="144"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="371" height="144"/>
@@ -50,8 +78,11 @@
                         <constraints>
                             <constraint firstItem="lj2-TO-bVP" firstAttribute="leading" secondItem="EF5-ar-pIY" secondAttribute="leading" id="32z-MP-zXF"/>
                             <constraint firstItem="1xF-QA-dbh" firstAttribute="top" secondItem="lj2-TO-bVP" secondAttribute="bottom" id="FLm-fA-L8x"/>
+                            <constraint firstAttribute="trailing" secondItem="Vvx-cO-3Br" secondAttribute="trailing" id="FRp-2Q-b4Y"/>
+                            <constraint firstItem="Vvx-cO-3Br" firstAttribute="top" secondItem="EF5-ar-pIY" secondAttribute="top" id="IA4-ig-unQ"/>
                             <constraint firstAttribute="trailing" secondItem="lj2-TO-bVP" secondAttribute="trailing" id="Mlh-sE-4Jo"/>
-                            <constraint firstItem="lj2-TO-bVP" firstAttribute="top" secondItem="EF5-ar-pIY" secondAttribute="top" id="msS-hl-91Z"/>
+                            <constraint firstItem="lj2-TO-bVP" firstAttribute="top" secondItem="Vvx-cO-3Br" secondAttribute="bottom" id="ahd-a1-REs"/>
+                            <constraint firstItem="Vvx-cO-3Br" firstAttribute="leading" secondItem="EF5-ar-pIY" secondAttribute="leading" id="xNT-R4-XSQ"/>
                         </constraints>
                     </view>
                     <connections>
